--- a/src/components/NavBar/index.css
+++ b/src/components/NavBar/index.css
@@ -31,3 +31,15 @@
   height: 28px;
   margin: 0 0.5rem 0 1.5rem;
 }
+
+@media only screen and (max-width: 600px) {
+  .navbar-container section img {
+    width: 24px;
+    height: 24px;
+  }
+
+  .navbar-container section:last-child img {
+    width: 24px;
+    height: 24px;
+  }
+}
